[gd_scene load_steps=11 format=3 uid="uid://bj3kkdcx4ybau"]

[ext_resource type="Script" path="res://Scripts/Menus/MainMenu.gd" id="1_l3i7p"]
[ext_resource type="Texture2D" uid="uid://dpyc54hg3yuq5" path="res://Art/UI [Updated]/General UI (New)/General Text Button Normal.png" id="3_av4ol"]
[ext_resource type="LabelSettings" uid="uid://bd184ntgknbm1" path="res://Fonts/MainMenuButtonFont.tres" id="3_hcix3"]
[ext_resource type="Texture2D" uid="uid://d38ikh2sci6ho" path="res://Art/UI [Updated]/General UI (New)/General Text Button Pressed.png" id="4_vfnhq"]
[ext_resource type="Texture2D" uid="uid://b26yc3hva8mip" path="res://Art/UI [Updated]/General UI (New)/General Text Button Hovered.png" id="5_bvgmw"]
[ext_resource type="Texture2D" uid="uid://d146asjwypy3p" path="res://Art/UI [Updated]/General UI (New)/General Text Button Disabled.png" id="6_0df7f"]
[ext_resource type="Texture2D" uid="uid://dh812rerribfc" path="res://Art/Village/[Old] Village Assets/Cupcake Sky Background.png" id="6_d6imb"]
[ext_resource type="AudioStream" uid="uid://bsfyqreky03vd" path="res://Audio/Loops/testsound.wav" id="8_fudwb"]

[sub_resource type="SystemFont" id="SystemFont_13bf4"]
font_names = PackedStringArray("Felix Titling")

[sub_resource type="LabelSettings" id="LabelSettings_rd6pl"]
font = SubResource("SystemFont_13bf4")
font_size = 150

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_l3i7p")

[node name="BackgroundImage" type="TextureRect" parent="."]
z_index = -1
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("6_d6imb")
expand_mode = 1

[node name="NewGameButton" type="TextureButton" parent="."]
offset_left = 320.0
offset_top = 456.0
offset_right = 824.0
offset_bottom = 540.0
tooltip_text = "Start Game"
texture_normal = ExtResource("3_av4ol")
texture_pressed = ExtResource("4_vfnhq")
texture_hover = ExtResource("5_bvgmw")
texture_disabled = ExtResource("6_0df7f")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="NewGameButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -66.0
offset_top = -17.5
offset_right = 66.0
offset_bottom = 17.5
grow_horizontal = 2
grow_vertical = 2
text = "New Game"
label_settings = ExtResource("3_hcix3")

[node name="ContinueGameButton" type="TextureButton" parent="."]
offset_left = 528.0
offset_top = 568.0
offset_right = 1032.0
offset_bottom = 652.0
tooltip_text = "Continue Game"
disabled = true
texture_normal = ExtResource("3_av4ol")
texture_pressed = ExtResource("4_vfnhq")
texture_hover = ExtResource("5_bvgmw")
texture_disabled = ExtResource("6_0df7f")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="ContinueGameButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -94.0
offset_top = -17.5
offset_right = 94.0
offset_bottom = 17.5
grow_horizontal = 2
grow_vertical = 2
text = "Continue Game"
label_settings = ExtResource("3_hcix3")

[node name="LoadGameButton" type="TextureButton" parent="."]
offset_left = 696.0
offset_top = 687.0
offset_right = 1200.0
offset_bottom = 771.0
tooltip_text = "Load Game"
disabled = true
texture_normal = ExtResource("3_av4ol")
texture_pressed = ExtResource("4_vfnhq")
texture_hover = ExtResource("5_bvgmw")
texture_disabled = ExtResource("6_0df7f")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="LoadGameButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -69.0
offset_top = -17.5
offset_right = 69.0
offset_bottom = 17.5
grow_horizontal = 2
grow_vertical = 2
text = "Load Game"
label_settings = ExtResource("3_hcix3")

[node name="SettingsButton" type="TextureButton" parent="."]
offset_left = 880.0
offset_top = 799.0
offset_right = 1384.0
offset_bottom = 883.0
tooltip_text = "Settings"
texture_normal = ExtResource("3_av4ol")
texture_pressed = ExtResource("4_vfnhq")
texture_hover = ExtResource("5_bvgmw")
texture_disabled = ExtResource("6_0df7f")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="SettingsButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.5
offset_top = -17.5
offset_right = 48.5
offset_bottom = 17.5
grow_horizontal = 2
grow_vertical = 2
text = "Settings"
label_settings = ExtResource("3_hcix3")

[node name="QuitButton" type="TextureButton" parent="."]
offset_left = 1088.0
offset_top = 911.0
offset_right = 1592.0
offset_bottom = 995.0
tooltip_text = "Quit"
texture_normal = ExtResource("3_av4ol")
texture_pressed = ExtResource("4_vfnhq")
texture_hover = ExtResource("5_bvgmw")
texture_disabled = ExtResource("6_0df7f")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="QuitButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -44.0
offset_top = -17.5
offset_right = 44.0
offset_bottom = 17.5
grow_horizontal = 2
grow_vertical = 2
text = "Quit"
label_settings = ExtResource("3_hcix3")

[node name="TitleLabel" type="Label" parent="."]
offset_left = 176.0
offset_top = 216.0
offset_right = 978.0
offset_bottom = 489.0
text = "CULT'LERY"
label_settings = SubResource("LabelSettings_rd6pl")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_fudwb")
volume_db = -80.0
autoplay = true

[connection signal="pressed" from="NewGameButton" to="." method="_on_new_game_button_pressed"]
[connection signal="pressed" from="ContinueGameButton" to="." method="_on_continue_game_button_pressed"]
[connection signal="pressed" from="LoadGameButton" to="." method="_on_load_game_button_pressed"]
[connection signal="pressed" from="SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_audio_stream_player_finished"]
